--- a/Source/RecognitionEngine/RecognitionEngine/RecognitionEngine.csproj
+++ b/Source/RecognitionEngine/RecognitionEngine/RecognitionEngine.csproj
@@ -6,7 +6,7 @@
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{C4A17DAD-40D3-4978-8D59-C3A45C582067}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Prax.RecognitionEngine</RootNamespace>
     <AssemblyName>RecognitionEngine</AssemblyName>
@@ -61,19 +61,12 @@
     <Compile Include="DisplayUtility.cs" />
     <Compile Include="DocumentReader.cs" />
     <Compile Include="Extensions.cs" />
-    <Compile Include="Form1.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
-    </Compile>
     <Compile Include="GraphicsHelper.cs" />
     <Compile Include="HeuristicsControlPanel.cs" />
     <Compile Include="ImageAndSegmentLocations.cs" />
     <Compile Include="OCRHandler.cs" />
     <Compile Include="OCRSegment.cs" />
     <Compile Include="OutputRenderer.cs" />
-    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResolvedSegment.cs" />
     <Compile Include="SaveAndOpenUtility.cs" />
@@ -82,11 +75,6 @@
     <Compile Include="SegmentatorV2.cs" />
     <Compile Include="TrainingData.cs" />
     <Compile Include="UploadDocument.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
-    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
