--- a/Source/RecognitionEngine/TestProject/TestProject.csproj
+++ b/Source/RecognitionEngine/TestProject/TestProject.csproj
@@ -46,6 +46,16 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ExtractedOCRFunctionality\OCRFunctionality.csproj">
+      <Project>{D219AEDF-0DE6-4EA0-87D8-4DA13085E7FC}</Project>
+      <Name>OCRFunctionality</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\RecognitionEngine\RecognitionEngine.csproj">
+      <Project>{C4A17DAD-40D3-4978-8D59-C3A45C582067}</Project>
+      <Name>RecognitionEngine</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
