--- a/Source/RecognitionEngine/TestProject/TestProject.csproj
+++ b/Source/RecognitionEngine/TestProject/TestProject.csproj
@@ -34,26 +34,29 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\ClassLibrary1\ImgRenderer.csproj">
+      <Project>{7F2057C2-741F-4EB7-BC65-9712A0C420F3}</Project>
+      <Name>ImgRenderer</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ExtractedOCRFunctionality\OCRFunctionality.csproj">
       <Project>{D219AEDF-0DE6-4EA0-87D8-4DA13085E7FC}</Project>
       <Name>OCRFunctionality</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\RecognitionEngine\RecognitionEngine.csproj">
-      <Project>{C4A17DAD-40D3-4978-8D59-C3A45C582067}</Project>
-      <Name>RecognitionEngine</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
