--- a/Source/RecognitionEngine/BugIsolation/BugIsolation.csproj
+++ b/Source/RecognitionEngine/BugIsolation/BugIsolation.csproj
@@ -5,7 +5,7 @@
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>c74c3d0d-8a59-45e0-8598-9be92f97f4bc</ProjectGuid>
+    <ProjectGuid>{7719FE00-1612-448D-AF95-A4F5E7B12088}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>BugIsolation</RootNamespace>
