--- a/Source/RecognitionEngine/TextMeasuring/TextMeasuring.csproj
+++ b/Source/RecognitionEngine/TextMeasuring/TextMeasuring.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{6519D332-4F5D-4388-9438-D7F1BBC9FEE2}</ProjectGuid>
+    <ProjectGuid>{ED227ECA-78A4-4AE7-9DFA-B8EBBCE7178B}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TestProject</RootNamespace>
-    <AssemblyName>TestProject</AssemblyName>
+    <RootNamespace>TextMeasuring</RootNamespace>
+    <AssemblyName>TextMeasuring</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -34,36 +34,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="PresentationCore" />
-    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\TextRenderer\TextRenderer.csproj">
-      <Project>{87DC4997-9C1B-462D-840F-1F9910549430}</Project>
-      <Name>TextRenderer</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ExtractedOCRFunctionality\OCRFunctionality.csproj">
-      <Project>{D219AEDF-0DE6-4EA0-87D8-4DA13085E7FC}</Project>
-      <Name>OCRFunctionality</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Graphics\Graphics.csproj">
-      <Project>{DC793707-6461-4074-A8DC-3A4495922D03}</Project>
-      <Name>Graphics</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
