Fixed some compiler errors. Finished implementing automated training functionality.

--- a/Source/RecognitionEngine/ExtractedOCRFunctionality/OCRFunctionality.csproj
+++ b/Source/RecognitionEngine/ExtractedOCRFunctionality/OCRFunctionality.csproj
@@ -53,6 +53,7 @@
     <Compile Include="TextSegment.cs" />
     <Compile Include="TrainingData.cs" />
     <Compile Include="TrainingDataLibrary.cs" />
+    <Compile Include="UnicodeConversion.cs" />
     <Compile Include="UploadDocument.cs" />
   </ItemGroup>
   <ItemGroup>
