DocumentProcessorBase, remove unused IDP members

--- a/Source/OcrEngine/Prax.OcrEngine.Common/Prax.OcrEngine.Common.csproj
+++ b/Source/OcrEngine/Prax.OcrEngine.Common/Prax.OcrEngine.Common.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="DocumentIdentifier.cs" />
     <Compile Include="Extensions.cs" />
+    <Compile Include="Services\DocumentProcessorBase.cs" />
     <Compile Include="Services\IAuthenticator.cs" />
     <Compile Include="Services\IDataCache.cs" />
     <Compile Include="Services\IDocumentManager.cs" />
