--- a/Source/OcrEngine/Prax.OcrEngine.OriginalEngine/Prax.OcrEngine.OriginalEngine.csproj
+++ b/Source/OcrEngine/Prax.OcrEngine.OriginalEngine/Prax.OcrEngine.OriginalEngine.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{EDBDAF6E-A58F-438E-954A-558B9C6B3302}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Prax.OcrEngine.OriginalEngine</RootNamespace>
+    <RootNamespace>Prax.OcrEngine.Engine</RootNamespace>
     <AssemblyName>Prax.OcrEngine.OriginalEngine</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -55,10 +55,17 @@
     <Compile Include="ImageUtilities\Measurer.cs" />
     <Compile Include="ImageUtilities\Renderer.cs" />
     <Compile Include="ImageUtilities\Utilities.cs" />
+    <Compile Include="OriginalDocumentProcessor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Segmentation\Segmentator.cs" />
     <Compile Include="Segmentation\TextSegment.cs" />
     <Compile Include="TrainingData.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Prax.OcrEngine.Common\Prax.OcrEngine.Common.csproj">
+      <Project>{B972ABB6-84DD-4E56-B932-2DE539EC86F9}</Project>
+      <Name>Prax.OcrEngine.Common</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
