--- a/Source/OcrEngine/Prax.OcrEngine.OriginalEngine/Prax.OcrEngine.OriginalEngine.csproj
+++ b/Source/OcrEngine/Prax.OcrEngine.OriginalEngine/Prax.OcrEngine.OriginalEngine.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReferenceData\IReferenceSet.cs" />
     <Compile Include="ReferenceData\MutableReferenceSet.cs" />
+    <Compile Include="ReferenceData\StorageExtensions.cs" />
     <Compile Include="Segmentation\Segmentator.cs" />
     <Compile Include="Segmentation\TextSegment.cs" />
     <Compile Include="ReferenceData\ReferenceSearcher .cs" />
