--- a/Source/OcrEngine/SimpleWebDemo/SimpleWebDemo.csproj
+++ b/Source/OcrEngine/SimpleWebDemo/SimpleWebDemo.csproj
@@ -21,7 +21,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;WEB</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
@@ -29,7 +29,7 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <DefineConstants>TRACE;WEB</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
@@ -44,7 +44,7 @@
       <HintPath>..\packages\EntityFramework.4.1.10331.0\lib\EntityFramework.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.WindowsAzure.ServiceRuntime, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
-    <Reference Include="Microsoft.WindowsAzure.StorageClient, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
+    <Reference Include="Microsoft.WindowsAzure.StorageClient, Version=1.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System.Data.Entity" />
@@ -73,6 +73,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\Config.cs">
+      <Link>Config.cs</Link>
+    </Compile>
     <Compile Include="Controllers\DocumentsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
@@ -86,6 +89,7 @@
     <Compile Include="HtmlToXaml\HtmlTokenType.cs" />
     <Compile Include="HtmlToXaml\HtmlToXamlConverter.cs" />
     <Compile Include="ImageRenderer.cs" />
+    <Compile Include="LocalConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -424,6 +428,14 @@
     <ProjectReference Include="..\Prax.OcrEngine.Common\Prax.OcrEngine.Common.csproj">
       <Project>{B972ABB6-84DD-4E56-B932-2DE539EC86F9}</Project>
       <Name>Prax.OcrEngine.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Prax.OcrEngine.OriginalEngine\Prax.OcrEngine.OriginalEngine.csproj">
+      <Project>{EDBDAF6E-A58F-438E-954A-558B9C6B3302}</Project>
+      <Name>Prax.OcrEngine.OriginalEngine</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Prax.OcrEngine.Services.Azure\Prax.OcrEngine.Services.Azure.csproj">
+      <Project>{1DD058C8-68CD-408A-AF17-CA14CDBDFCCD}</Project>
+      <Name>Prax.OcrEngine.Services.Azure</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
