--- a/Source/OcrEngine/packages/repositories.config
+++ b/Source/OcrEngine/packages/repositories.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\SimpleWebDemo\packages.config" />
+  <repository path="..\Prax.OcrEngine.Website\packages.config" />
 </repositories>
