--- a/Source/OcrEngine/Prax.OcrEngine.Website/Prax.OcrEngine.Website.csproj
+++ b/Source/OcrEngine/Prax.OcrEngine.Website/Prax.OcrEngine.Website.csproj
@@ -220,6 +220,10 @@
       <Project>{0507F74F-3DB1-4FBE-A804-664D2FE52CA5}</Project>
       <Name>Prax.OcrEngine.Engine</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Prax.OcrEngine.OriginalEngine\Prax.OcrEngine.OriginalEngine.csproj">
+      <Project>{EDBDAF6E-A58F-438E-954A-558B9C6B3302}</Project>
+      <Name>Prax.OcrEngine.OriginalEngine</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Prax.OcrEngine.Services.Azure\Prax.OcrEngine.Services.Azure.csproj">
       <Project>{1DD058C8-68CD-408A-AF17-CA14CDBDFCCD}</Project>
       <Name>Prax.OcrEngine.Services.Azure</Name>
