--- a/Source/OcrEngine/Prax.OcrEngine.Common/Prax.OcrEngine.Common.csproj
+++ b/Source/OcrEngine/Prax.OcrEngine.Common/Prax.OcrEngine.Common.csproj
@@ -41,6 +41,9 @@
     <AssemblyOriginatorKeyFile>Prax.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="SLaks.Progression">
+      <HintPath>..\..\..\Assemblies\SLaks.Progression.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -53,12 +56,11 @@
   <ItemGroup>
     <Compile Include="DocumentIdentifier.cs" />
     <Compile Include="Extensions.cs" />
-    <Compile Include="Services\DocumentProcessorBase.cs" />
     <Compile Include="Services\IAuthenticator.cs" />
     <Compile Include="Services\IDataCache.cs" />
+    <Compile Include="Services\IDocumentExecutor.cs" />
     <Compile Include="Services\IDocumentManager.cs" />
-    <Compile Include="Services\IDocumentProcessor.cs" />
-    <Compile Include="Services\IProcessorController.cs" />
+    <Compile Include="Services\IDocumentRecognizer.cs" />
     <Compile Include="Services\IResultConverter.cs" />
     <Compile Include="Services\IStorageClient.cs" />
     <Compile Include="Services\DocumentManager.cs" />
@@ -68,10 +70,11 @@
     <Compile Include="Services\Stubs\FixedConverters.cs" />
     <Compile Include="Services\Stubs\InMemoryStorage.cs" />
     <Compile Include="Services\Stubs\InMemoryUserAccount.cs" />
-    <Compile Include="Services\Stubs\SimpleProcessorController.cs" />
+    <Compile Include="Services\Stubs\SimpleDocumentExecutor.cs" />
     <Compile Include="Services\Stubs\StaticDataCache.cs" />
-    <Compile Include="Services\Stubs\UselessProcessor.cs" />
+    <Compile Include="Services\Stubs\UselessRecognizer.cs" />
     <Compile Include="Services\Stubs\UserlessAuthenticator.cs" />
+    <Compile Include="Services\ThreadedDocumentExecutor.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Prax.snk" />
