--- a/Source/OcrEngine/Prax.OcrEngine.OriginalEngine/Prax.OcrEngine.OriginalEngine.csproj
+++ b/Source/OcrEngine/Prax.OcrEngine.OriginalEngine/Prax.OcrEngine.OriginalEngine.csproj
@@ -45,6 +45,9 @@
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
+    <Reference Include="SLaks.Progression">
+      <HintPath>..\..\..\Assemblies\SLaks.Progression.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -65,7 +68,7 @@
     <Compile Include="ImageData.cs" />
     <Compile Include="ImageUtilities\Measurer.cs" />
     <Compile Include="ImageUtilities\Utilities.cs" />
-    <Compile Include="OriginalDocumentProcessor.cs" />
+    <Compile Include="OriginalDocumentRecognizer.cs" />
     <Compile Include="OutputRenderer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReferenceData\IReferenceSet.cs" />
