Fix version binding

--- a/Source/OcrEngine/Prax.OcrEngine.ScanWorker/app.config
+++ b/Source/OcrEngine/Prax.OcrEngine.ScanWorker/app.config
@@ -1,5 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+	<runtime>
+		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+			<dependentAssembly>
+				<assemblyIdentity name="Microsoft.WindowsAzure.StorageClient" publicKeyToken="31bf3856ad364e35"/>
+				<bindingRedirect oldVersion="1.0.0.0" newVersion="1.1.0.0"/>
+			</dependentAssembly>
+		</assemblyBinding>
+	</runtime>
+	
     <system.diagnostics>
         <trace>
             <listeners>
