--- a/Source/OcrEngine/Prax.OcrEngine.Services.Azure/Prax.OcrEngine.Services.Azure.csproj
+++ b/Source/OcrEngine/Prax.OcrEngine.Services.Azure/Prax.OcrEngine.Services.Azure.csproj
@@ -67,6 +67,7 @@
     </CodeAnalysisDictionary>
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="Prax.snk" />
   </ItemGroup>
   <ItemGroup>
